tests/ui/ast_function.stderr
error[E0505]: cannot move out of `name` because it is borrowed
  --> $DIR/ast_function.rs:10:10
   |
9  |     let fun = ast::Function::new(&name, &args).unwrap();
   |                                  ----- borrow of `name` occurs here
10 |     drop(name);
   |          ^^^^ move out of `name` occurs here
11 |     drop(args);
12 |     println!("{:?}",fun);
   |                     --- borrow later used here

error[E0505]: cannot move out of `args` because it is borrowed
  --> $DIR/ast_function.rs:11:10
   |
9  |     let fun = ast::Function::new(&name, &args).unwrap();
   |                                         ----- borrow of `args` occurs here
10 |     drop(name);
11 |     drop(args);
   |          ^^^^ move out of `args` occurs here
12 |     println!("{:?}",fun);
   |                     --- borrow later used here
